[package]
name = "ravelin"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
ratatui = "0.30"
crossterm = "0.29"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }
regex = "1.12"
glob = "0.3"
lazy_static = "1.5"
futures = "0.3"
